# itmo_labs

./: .gitignore  .gitmodules  push.sh
AK/: acc.asm  (+3 more)
AK/lab4/translator/: ASTNode.cpp  ASTNode.h  CMakeLists.txt  binarizer.cpp  binarizer.h  codeGenerator.cpp  codeGenerator.h  main.cpp  processorModel.cpp  processorModel.h  semanticAnalyzer.cpp  semanticAnalyzer.h  translator.cpp  translator.h  treeVisualizer.h
AK/lab4/translator/machine/: configParser.hpp  machine.cpp  processorModel.cpp  processorModel.h
AK/lab4/translator/tests/: CMakeLists.txt  golden_tests.cpp
AK/lab4/translator/tests/cases/algo/palindrome/: config.cfg  program.txt
AK/lab4/translator/tests/cases/algo/sort/: program.txt
AK/lab4/translator/tests/cases/basics/arithmetic/: program.txt
AK/lab4/translator/tests/cases/basics/array/: program.txt
AK/lab4/translator/tests/cases/basics/cat/: program.txt
AK/lab4/translator/tests/cases/basics/double_precision/: program.txt
AK/lab4/translator/tests/cases/basics/hello/: program.txt
AK/lab4/translator/tests/cases/basics/hello_user_name/: config.cfg  program.txt
AK/lab4/translator/tests/cases/control_flow/nested_while/: config.cfg  program.txt
AK/lab4/translator/tests/cases/control_flow/while_break/: expected.txt  program.txt
AK/lab4/translator/tests/cases/function/overload/: program.txt
AK/lab4/translator/translator/: ASTNode.h  ASTNode.hpp  ASTVisitor.hpp  binarizer.cpp  binarizer.h  codeGenerator.cpp  codeGenerator.h  semanticAnalyzer.cpp  semanticAnalyzer.h  translator.cpp  treeGen.cpp  treeGen.h  treeVisualizer.h  treeVisualizer.hpp
(+689 files in other folders)
